projdatabase/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement_list statement
Rule 3     statement -> insert_statement
Rule 4     statement -> select_statement
Rule 5     statement -> show_statement
Rule 6     statement -> create_table_statement
Rule 7     statement -> delete_statement
Rule 8     statement -> update_statement
Rule 9     statement -> drop_table_statement
Rule 10    show_statement -> SHOW TABLES
Rule 11    show_statement -> SHOW TABLES SEMI
Rule 12    show_statement -> SHOW TABLE ID
Rule 13    show_statement -> SHOW TABLE ID SEMI
Rule 14    drop_table_statement -> DROP TABLE ID
Rule 15    drop_table_statement -> DROP TABLE ID SEMI
Rule 16    create_table_statement -> CREATE TABLE ID LPAREN create_table_column_list RPAREN
Rule 17    create_table_statement -> CREATE TABLE ID LPAREN create_table_column_list RPAREN SEMI
Rule 18    create_table_column_list -> create_table_column_spec COMMA create_table_column_list
Rule 19    create_table_column_list -> create_table_column_spec
Rule 20    create_table_column_spec -> ID data_type qualification_list
Rule 21    create_table_column_spec -> ID data_type
Rule 22    data_type -> INT
Rule 23    data_type -> DOUBLE
Rule 24    data_type -> TEXT
Rule 25    data_type -> TINYINT
Rule 26    data_type -> SMALLINT
Rule 27    data_type -> BIGINT
Rule 28    data_type -> REAL
Rule 29    data_type -> DATETIME
Rule 30    data_type -> DATE
Rule 31    qualification_list -> qualification_spec qualification_list
Rule 32    qualification_list -> qualification_spec
Rule 33    qualification_spec -> NOT NULL
Rule 34    qualification_spec -> PRIMARY KEY
Rule 35    delete_statement -> DELETE FROM ID opt_where_clause
Rule 36    delete_statement -> DELETE FROM ID opt_where_clause SEMI
Rule 37    insert_statement -> INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
Rule 38    insert_statement -> INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
Rule 39    insert_statement -> INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
Rule 40    insert_statement -> INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
Rule 41    insert_statement -> INSERT ID VALUES LPAREN expr_list RPAREN
Rule 42    insert_statement -> INSERT ID VALUES LPAREN expr_list RPAREN SEMI
Rule 43    insert_statement -> INSERT INTO ID VALUES LPAREN expr_list RPAREN
Rule 44    insert_statement -> INSERT INTO ID VALUES LPAREN expr_list RPAREN SEMI
Rule 45    update_statement -> UPDATE ID SET asignment_list opt_where_clause
Rule 46    update_statement -> UPDATE ID SET asignment_list opt_where_clause SEMI
Rule 47    asignment_list -> asignment_spec COMMA asignment_list
Rule 48    asignment_list -> asignment_spec
Rule 49    asignment_spec -> ID EQ conditional_expr
Rule 50    select_statement -> SELECT select_columns FROM ID opt_where_clause opt_orderby_clause
Rule 51    select_statement -> SELECT select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
Rule 52    select_columns -> TIMES
Rule 53    select_columns -> id_list
Rule 54    opt_where_clause -> WHERE conditional_expr
Rule 55    opt_where_clause -> <empty>
Rule 56    conditional_expr -> conditional_expr OR conditional_expr
Rule 57    conditional_expr -> conditional_expr AND conditional_expr
Rule 58    conditional_expr -> NOT conditional_expr
Rule 59    conditional_expr -> LPAREN conditional_expr RPAREN
Rule 60    conditional_expr -> predicate
Rule 61    predicate -> comparison_predicate
Rule 62    comparison_predicate -> scalar_exp EQ scalar_exp
Rule 63    comparison_predicate -> scalar_exp NE scalar_exp
Rule 64    comparison_predicate -> scalar_exp LT scalar_exp
Rule 65    comparison_predicate -> scalar_exp LE scalar_exp
Rule 66    comparison_predicate -> scalar_exp GT scalar_exp
Rule 67    comparison_predicate -> scalar_exp GE scalar_exp
Rule 68    comparison_predicate -> scalar_exp
Rule 69    scalar_exp -> scalar_exp PLUS scalar_exp
Rule 70    scalar_exp -> scalar_exp MINUS scalar_exp
Rule 71    scalar_exp -> scalar_exp TIMES scalar_exp
Rule 72    scalar_exp -> scalar_exp DIVIDE scalar_exp
Rule 73    scalar_exp -> atom
Rule 74    scalar_exp -> LPAREN scalar_exp RPAREN
Rule 75    atom -> ID
Rule 76    atom -> FLOAT
Rule 77    atom -> NUMBER
Rule 78    atom -> STRING
Rule 79    atom -> NULL
Rule 80    opt_orderby_clause -> ORDER BY ID
Rule 81    opt_orderby_clause -> <empty>
Rule 82    id_list -> ID
Rule 83    id_list -> id_list COMMA ID
Rule 84    expr_list -> conditional_expr
Rule 85    expr_list -> expr_list COMMA conditional_expr
Rule 86    expr -> expr PLUS term
Rule 87    expr -> expr MINUS term
Rule 88    expr -> term
Rule 89    expr -> ID
Rule 90    expr -> STRING
Rule 91    expr -> NULL
Rule 92    expr -> <empty>
Rule 93    term -> term TIMES factor
Rule 94    term -> term DIVIDE factor
Rule 95    term -> factor
Rule 96    factor -> NUMBER
Rule 97    factor -> LPAREN expr RPAREN

Terminals, with rules where they appear

AND                  : 57
BIGINT               : 27
BY                   : 80
COMMA                : 18 47 83 85
CREATE               : 16 17
DATE                 : 30
DATETIME             : 29
DELETE               : 35 36
DIVIDE               : 72 94
DOUBLE               : 23
DROP                 : 14 15
EQ                   : 49 62
FLOAT                : 76
FROM                 : 35 36 50 51
GE                   : 67
GT                   : 66
ID                   : 12 13 14 15 16 17 20 21 35 36 37 38 39 40 41 42 43 44 45 46 49 50 51 75 80 82 83 89
INSERT               : 37 38 39 40 41 42 43 44
INT                  : 22
INTO                 : 39 40 43 44
KEY                  : 34
LE                   : 65
LPAREN               : 16 17 37 37 38 38 39 39 40 40 41 42 43 44 59 74 97
LT                   : 64
MINUS                : 70 87
NE                   : 63
NOT                  : 33 58
NULL                 : 33 79 91
NUMBER               : 77 96
OR                   : 56
ORDER                : 80
PLUS                 : 69 86
PRIMARY              : 34
REAL                 : 28
RPAREN               : 16 17 37 37 38 38 39 39 40 40 41 42 43 44 59 74 97
SELECT               : 50 51
SEMI                 : 11 13 15 17 36 38 40 42 44 46 51
SET                  : 45 46
SHOW                 : 10 11 12 13
SMALLINT             : 26
STRING               : 78 90
TABLE                : 12 13 14 15 16 17
TABLES               : 10 11
TEXT                 : 24
TIMES                : 52 71 93
TINYINT              : 25
UPDATE               : 45 46
VALUES               : 37 38 39 40 41 42 43 44
WHERE                : 54
error                : 

Nonterminals, with rules where they appear

asignment_list       : 45 46 47
asignment_spec       : 47 48
atom                 : 73
comparison_predicate : 61
conditional_expr     : 49 54 56 56 57 57 58 59 84 85
create_table_column_list : 16 17 18
create_table_column_spec : 18 19
create_table_statement : 6
data_type            : 20 21
delete_statement     : 7
drop_table_statement : 9
expr                 : 86 87 97
expr_list            : 37 38 39 40 41 42 43 44 85
factor               : 93 94 95
id_list              : 37 38 39 40 53 83
insert_statement     : 3
opt_orderby_clause   : 50 51
opt_where_clause     : 35 36 45 46 50 51
predicate            : 60
qualification_list   : 20 31
qualification_spec   : 31 32
scalar_exp           : 62 62 63 63 64 64 65 65 66 66 67 67 68 69 69 70 70 71 71 72 72 74
select_columns       : 50 51
select_statement     : 4
show_statement       : 5
statement            : 1 2
statement_list       : 2 0
term                 : 86 87 88 93 94
update_statement     : 8

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement_list statement
    (3) statement -> . insert_statement
    (4) statement -> . select_statement
    (5) statement -> . show_statement
    (6) statement -> . create_table_statement
    (7) statement -> . delete_statement
    (8) statement -> . update_statement
    (9) statement -> . drop_table_statement
    (37) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (38) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (39) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (40) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (41) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN
    (42) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN SEMI
    (43) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN
    (44) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN SEMI
    (50) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause
    (51) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
    (10) show_statement -> . SHOW TABLES
    (11) show_statement -> . SHOW TABLES SEMI
    (12) show_statement -> . SHOW TABLE ID
    (13) show_statement -> . SHOW TABLE ID SEMI
    (16) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN
    (17) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN SEMI
    (35) delete_statement -> . DELETE FROM ID opt_where_clause
    (36) delete_statement -> . DELETE FROM ID opt_where_clause SEMI
    (45) update_statement -> . UPDATE ID SET asignment_list opt_where_clause
    (46) update_statement -> . UPDATE ID SET asignment_list opt_where_clause SEMI
    (14) drop_table_statement -> . DROP TABLE ID
    (15) drop_table_statement -> . DROP TABLE ID SEMI

    INSERT          shift and go to state 1
    SELECT          shift and go to state 8
    SHOW            shift and go to state 16
    CREATE          shift and go to state 13
    DELETE          shift and go to state 10
    UPDATE          shift and go to state 9
    DROP            shift and go to state 2

    create_table_statement         shift and go to state 11
    insert_statement               shift and go to state 3
    delete_statement               shift and go to state 4
    drop_table_statement           shift and go to state 12
    update_statement               shift and go to state 6
    statement_list                 shift and go to state 14
    select_statement               shift and go to state 7
    statement                      shift and go to state 15
    show_statement                 shift and go to state 5

state 1

    (37) insert_statement -> INSERT . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (38) insert_statement -> INSERT . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (39) insert_statement -> INSERT . INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (40) insert_statement -> INSERT . INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (41) insert_statement -> INSERT . ID VALUES LPAREN expr_list RPAREN
    (42) insert_statement -> INSERT . ID VALUES LPAREN expr_list RPAREN SEMI
    (43) insert_statement -> INSERT . INTO ID VALUES LPAREN expr_list RPAREN
    (44) insert_statement -> INSERT . INTO ID VALUES LPAREN expr_list RPAREN SEMI

    ID              shift and go to state 17
    INTO            shift and go to state 18


state 2

    (14) drop_table_statement -> DROP . TABLE ID
    (15) drop_table_statement -> DROP . TABLE ID SEMI

    TABLE           shift and go to state 19


state 3

    (3) statement -> insert_statement .

    INSERT          reduce using rule 3 (statement -> insert_statement .)
    SELECT          reduce using rule 3 (statement -> insert_statement .)
    SHOW            reduce using rule 3 (statement -> insert_statement .)
    CREATE          reduce using rule 3 (statement -> insert_statement .)
    DELETE          reduce using rule 3 (statement -> insert_statement .)
    UPDATE          reduce using rule 3 (statement -> insert_statement .)
    DROP            reduce using rule 3 (statement -> insert_statement .)
    $end            reduce using rule 3 (statement -> insert_statement .)


state 4

    (7) statement -> delete_statement .

    INSERT          reduce using rule 7 (statement -> delete_statement .)
    SELECT          reduce using rule 7 (statement -> delete_statement .)
    SHOW            reduce using rule 7 (statement -> delete_statement .)
    CREATE          reduce using rule 7 (statement -> delete_statement .)
    DELETE          reduce using rule 7 (statement -> delete_statement .)
    UPDATE          reduce using rule 7 (statement -> delete_statement .)
    DROP            reduce using rule 7 (statement -> delete_statement .)
    $end            reduce using rule 7 (statement -> delete_statement .)


state 5

    (5) statement -> show_statement .

    INSERT          reduce using rule 5 (statement -> show_statement .)
    SELECT          reduce using rule 5 (statement -> show_statement .)
    SHOW            reduce using rule 5 (statement -> show_statement .)
    CREATE          reduce using rule 5 (statement -> show_statement .)
    DELETE          reduce using rule 5 (statement -> show_statement .)
    UPDATE          reduce using rule 5 (statement -> show_statement .)
    DROP            reduce using rule 5 (statement -> show_statement .)
    $end            reduce using rule 5 (statement -> show_statement .)


state 6

    (8) statement -> update_statement .

    INSERT          reduce using rule 8 (statement -> update_statement .)
    SELECT          reduce using rule 8 (statement -> update_statement .)
    SHOW            reduce using rule 8 (statement -> update_statement .)
    CREATE          reduce using rule 8 (statement -> update_statement .)
    DELETE          reduce using rule 8 (statement -> update_statement .)
    UPDATE          reduce using rule 8 (statement -> update_statement .)
    DROP            reduce using rule 8 (statement -> update_statement .)
    $end            reduce using rule 8 (statement -> update_statement .)


state 7

    (4) statement -> select_statement .

    INSERT          reduce using rule 4 (statement -> select_statement .)
    SELECT          reduce using rule 4 (statement -> select_statement .)
    SHOW            reduce using rule 4 (statement -> select_statement .)
    CREATE          reduce using rule 4 (statement -> select_statement .)
    DELETE          reduce using rule 4 (statement -> select_statement .)
    UPDATE          reduce using rule 4 (statement -> select_statement .)
    DROP            reduce using rule 4 (statement -> select_statement .)
    $end            reduce using rule 4 (statement -> select_statement .)


state 8

    (50) select_statement -> SELECT . select_columns FROM ID opt_where_clause opt_orderby_clause
    (51) select_statement -> SELECT . select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
    (52) select_columns -> . TIMES
    (53) select_columns -> . id_list
    (82) id_list -> . ID
    (83) id_list -> . id_list COMMA ID

    TIMES           shift and go to state 23
    ID              shift and go to state 20

    select_columns                 shift and go to state 21
    id_list                        shift and go to state 22

state 9

    (45) update_statement -> UPDATE . ID SET asignment_list opt_where_clause
    (46) update_statement -> UPDATE . ID SET asignment_list opt_where_clause SEMI

    ID              shift and go to state 24


state 10

    (35) delete_statement -> DELETE . FROM ID opt_where_clause
    (36) delete_statement -> DELETE . FROM ID opt_where_clause SEMI

    FROM            shift and go to state 25


state 11

    (6) statement -> create_table_statement .

    INSERT          reduce using rule 6 (statement -> create_table_statement .)
    SELECT          reduce using rule 6 (statement -> create_table_statement .)
    SHOW            reduce using rule 6 (statement -> create_table_statement .)
    CREATE          reduce using rule 6 (statement -> create_table_statement .)
    DELETE          reduce using rule 6 (statement -> create_table_statement .)
    UPDATE          reduce using rule 6 (statement -> create_table_statement .)
    DROP            reduce using rule 6 (statement -> create_table_statement .)
    $end            reduce using rule 6 (statement -> create_table_statement .)


state 12

    (9) statement -> drop_table_statement .

    INSERT          reduce using rule 9 (statement -> drop_table_statement .)
    SELECT          reduce using rule 9 (statement -> drop_table_statement .)
    SHOW            reduce using rule 9 (statement -> drop_table_statement .)
    CREATE          reduce using rule 9 (statement -> drop_table_statement .)
    DELETE          reduce using rule 9 (statement -> drop_table_statement .)
    UPDATE          reduce using rule 9 (statement -> drop_table_statement .)
    DROP            reduce using rule 9 (statement -> drop_table_statement .)
    $end            reduce using rule 9 (statement -> drop_table_statement .)


state 13

    (16) create_table_statement -> CREATE . TABLE ID LPAREN create_table_column_list RPAREN
    (17) create_table_statement -> CREATE . TABLE ID LPAREN create_table_column_list RPAREN SEMI

    TABLE           shift and go to state 26


state 14

    (0) S' -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement -> . insert_statement
    (4) statement -> . select_statement
    (5) statement -> . show_statement
    (6) statement -> . create_table_statement
    (7) statement -> . delete_statement
    (8) statement -> . update_statement
    (9) statement -> . drop_table_statement
    (37) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (38) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (39) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (40) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (41) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN
    (42) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN SEMI
    (43) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN
    (44) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN SEMI
    (50) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause
    (51) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
    (10) show_statement -> . SHOW TABLES
    (11) show_statement -> . SHOW TABLES SEMI
    (12) show_statement -> . SHOW TABLE ID
    (13) show_statement -> . SHOW TABLE ID SEMI
    (16) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN
    (17) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN SEMI
    (35) delete_statement -> . DELETE FROM ID opt_where_clause
    (36) delete_statement -> . DELETE FROM ID opt_where_clause SEMI
    (45) update_statement -> . UPDATE ID SET asignment_list opt_where_clause
    (46) update_statement -> . UPDATE ID SET asignment_list opt_where_clause SEMI
    (14) drop_table_statement -> . DROP TABLE ID
    (15) drop_table_statement -> . DROP TABLE ID SEMI

    INSERT          shift and go to state 1
    SELECT          shift and go to state 8
    SHOW            shift and go to state 16
    CREATE          shift and go to state 13
    DELETE          shift and go to state 10
    UPDATE          shift and go to state 9
    DROP            shift and go to state 2

    create_table_statement         shift and go to state 11
    insert_statement               shift and go to state 3
    delete_statement               shift and go to state 4
    drop_table_statement           shift and go to state 12
    update_statement               shift and go to state 6
    select_statement               shift and go to state 7
    statement                      shift and go to state 27
    show_statement                 shift and go to state 5

state 15

    (1) statement_list -> statement .

    INSERT          reduce using rule 1 (statement_list -> statement .)
    SELECT          reduce using rule 1 (statement_list -> statement .)
    SHOW            reduce using rule 1 (statement_list -> statement .)
    CREATE          reduce using rule 1 (statement_list -> statement .)
    DELETE          reduce using rule 1 (statement_list -> statement .)
    UPDATE          reduce using rule 1 (statement_list -> statement .)
    DROP            reduce using rule 1 (statement_list -> statement .)
    $end            reduce using rule 1 (statement_list -> statement .)


state 16

    (10) show_statement -> SHOW . TABLES
    (11) show_statement -> SHOW . TABLES SEMI
    (12) show_statement -> SHOW . TABLE ID
    (13) show_statement -> SHOW . TABLE ID SEMI

    TABLES          shift and go to state 29
    TABLE           shift and go to state 28


state 17

    (37) insert_statement -> INSERT ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (38) insert_statement -> INSERT ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (41) insert_statement -> INSERT ID . VALUES LPAREN expr_list RPAREN
    (42) insert_statement -> INSERT ID . VALUES LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 30
    VALUES          shift and go to state 31


state 18

    (39) insert_statement -> INSERT INTO . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (40) insert_statement -> INSERT INTO . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (43) insert_statement -> INSERT INTO . ID VALUES LPAREN expr_list RPAREN
    (44) insert_statement -> INSERT INTO . ID VALUES LPAREN expr_list RPAREN SEMI

    ID              shift and go to state 32


state 19

    (14) drop_table_statement -> DROP TABLE . ID
    (15) drop_table_statement -> DROP TABLE . ID SEMI

    ID              shift and go to state 33


state 20

    (82) id_list -> ID .

    COMMA           reduce using rule 82 (id_list -> ID .)
    FROM            reduce using rule 82 (id_list -> ID .)
    RPAREN          reduce using rule 82 (id_list -> ID .)


state 21

    (50) select_statement -> SELECT select_columns . FROM ID opt_where_clause opt_orderby_clause
    (51) select_statement -> SELECT select_columns . FROM ID opt_where_clause opt_orderby_clause SEMI

    FROM            shift and go to state 34


state 22

    (53) select_columns -> id_list .
    (83) id_list -> id_list . COMMA ID

    FROM            reduce using rule 53 (select_columns -> id_list .)
    COMMA           shift and go to state 35


state 23

    (52) select_columns -> TIMES .

    FROM            reduce using rule 52 (select_columns -> TIMES .)


state 24

    (45) update_statement -> UPDATE ID . SET asignment_list opt_where_clause
    (46) update_statement -> UPDATE ID . SET asignment_list opt_where_clause SEMI

    SET             shift and go to state 36


state 25

    (35) delete_statement -> DELETE FROM . ID opt_where_clause
    (36) delete_statement -> DELETE FROM . ID opt_where_clause SEMI

    ID              shift and go to state 37


state 26

    (16) create_table_statement -> CREATE TABLE . ID LPAREN create_table_column_list RPAREN
    (17) create_table_statement -> CREATE TABLE . ID LPAREN create_table_column_list RPAREN SEMI

    ID              shift and go to state 38


state 27

    (2) statement_list -> statement_list statement .

    INSERT          reduce using rule 2 (statement_list -> statement_list statement .)
    SELECT          reduce using rule 2 (statement_list -> statement_list statement .)
    SHOW            reduce using rule 2 (statement_list -> statement_list statement .)
    CREATE          reduce using rule 2 (statement_list -> statement_list statement .)
    DELETE          reduce using rule 2 (statement_list -> statement_list statement .)
    UPDATE          reduce using rule 2 (statement_list -> statement_list statement .)
    DROP            reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 28

    (12) show_statement -> SHOW TABLE . ID
    (13) show_statement -> SHOW TABLE . ID SEMI

    ID              shift and go to state 39


state 29

    (10) show_statement -> SHOW TABLES .
    (11) show_statement -> SHOW TABLES . SEMI

    INSERT          reduce using rule 10 (show_statement -> SHOW TABLES .)
    SELECT          reduce using rule 10 (show_statement -> SHOW TABLES .)
    SHOW            reduce using rule 10 (show_statement -> SHOW TABLES .)
    CREATE          reduce using rule 10 (show_statement -> SHOW TABLES .)
    DELETE          reduce using rule 10 (show_statement -> SHOW TABLES .)
    UPDATE          reduce using rule 10 (show_statement -> SHOW TABLES .)
    DROP            reduce using rule 10 (show_statement -> SHOW TABLES .)
    $end            reduce using rule 10 (show_statement -> SHOW TABLES .)
    SEMI            shift and go to state 40


state 30

    (37) insert_statement -> INSERT ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN
    (38) insert_statement -> INSERT ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (82) id_list -> . ID
    (83) id_list -> . id_list COMMA ID

    ID              shift and go to state 20

    id_list                        shift and go to state 41

state 31

    (41) insert_statement -> INSERT ID VALUES . LPAREN expr_list RPAREN
    (42) insert_statement -> INSERT ID VALUES . LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 42


state 32

    (39) insert_statement -> INSERT INTO ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (40) insert_statement -> INSERT INTO ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (43) insert_statement -> INSERT INTO ID . VALUES LPAREN expr_list RPAREN
    (44) insert_statement -> INSERT INTO ID . VALUES LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 43
    VALUES          shift and go to state 44


state 33

    (14) drop_table_statement -> DROP TABLE ID .
    (15) drop_table_statement -> DROP TABLE ID . SEMI

    INSERT          reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    SELECT          reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    SHOW            reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    CREATE          reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    DELETE          reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    UPDATE          reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    DROP            reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    $end            reduce using rule 14 (drop_table_statement -> DROP TABLE ID .)
    SEMI            shift and go to state 45


state 34

    (50) select_statement -> SELECT select_columns FROM . ID opt_where_clause opt_orderby_clause
    (51) select_statement -> SELECT select_columns FROM . ID opt_where_clause opt_orderby_clause SEMI

    ID              shift and go to state 46


state 35

    (83) id_list -> id_list COMMA . ID

    ID              shift and go to state 47


state 36

    (45) update_statement -> UPDATE ID SET . asignment_list opt_where_clause
    (46) update_statement -> UPDATE ID SET . asignment_list opt_where_clause SEMI
    (47) asignment_list -> . asignment_spec COMMA asignment_list
    (48) asignment_list -> . asignment_spec
    (49) asignment_spec -> . ID EQ conditional_expr

    ID              shift and go to state 50

    asignment_spec                 shift and go to state 48
    asignment_list                 shift and go to state 49

state 37

    (35) delete_statement -> DELETE FROM ID . opt_where_clause
    (36) delete_statement -> DELETE FROM ID . opt_where_clause SEMI
    (54) opt_where_clause -> . WHERE conditional_expr
    (55) opt_where_clause -> .

    WHERE           shift and go to state 51
    SEMI            reduce using rule 55 (opt_where_clause -> .)
    INSERT          reduce using rule 55 (opt_where_clause -> .)
    SELECT          reduce using rule 55 (opt_where_clause -> .)
    SHOW            reduce using rule 55 (opt_where_clause -> .)
    CREATE          reduce using rule 55 (opt_where_clause -> .)
    DELETE          reduce using rule 55 (opt_where_clause -> .)
    UPDATE          reduce using rule 55 (opt_where_clause -> .)
    DROP            reduce using rule 55 (opt_where_clause -> .)
    $end            reduce using rule 55 (opt_where_clause -> .)

    opt_where_clause               shift and go to state 52

state 38

    (16) create_table_statement -> CREATE TABLE ID . LPAREN create_table_column_list RPAREN
    (17) create_table_statement -> CREATE TABLE ID . LPAREN create_table_column_list RPAREN SEMI

    LPAREN          shift and go to state 53


state 39

    (12) show_statement -> SHOW TABLE ID .
    (13) show_statement -> SHOW TABLE ID . SEMI

    INSERT          reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    SELECT          reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    SHOW            reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    CREATE          reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    DELETE          reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    UPDATE          reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    DROP            reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    $end            reduce using rule 12 (show_statement -> SHOW TABLE ID .)
    SEMI            shift and go to state 54


state 40

    (11) show_statement -> SHOW TABLES SEMI .

    INSERT          reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)
    SELECT          reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)
    SHOW            reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)
    CREATE          reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)
    DELETE          reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)
    UPDATE          reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)
    DROP            reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)
    $end            reduce using rule 11 (show_statement -> SHOW TABLES SEMI .)


state 41

    (37) insert_statement -> INSERT ID LPAREN id_list . RPAREN VALUES LPAREN expr_list RPAREN
    (38) insert_statement -> INSERT ID LPAREN id_list . RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (83) id_list -> id_list . COMMA ID

    RPAREN          shift and go to state 55
    COMMA           shift and go to state 35


state 42

    (41) insert_statement -> INSERT ID VALUES LPAREN . expr_list RPAREN
    (42) insert_statement -> INSERT ID VALUES LPAREN . expr_list RPAREN SEMI
    (84) expr_list -> . conditional_expr
    (85) expr_list -> . expr_list COMMA conditional_expr
    (56) conditional_expr -> . conditional_expr OR conditional_expr
    (57) conditional_expr -> . conditional_expr AND conditional_expr
    (58) conditional_expr -> . NOT conditional_expr
    (59) conditional_expr -> . LPAREN conditional_expr RPAREN
    (60) conditional_expr -> . predicate
    (61) predicate -> . comparison_predicate
    (62) comparison_predicate -> . scalar_exp EQ scalar_exp
    (63) comparison_predicate -> . scalar_exp NE scalar_exp
    (64) comparison_predicate -> . scalar_exp LT scalar_exp
    (65) comparison_predicate -> . scalar_exp LE scalar_exp
    (66) comparison_predicate -> . scalar_exp GT scalar_exp
    (67) comparison_predicate -> . scalar_exp GE scalar_exp
    (68) comparison_predicate -> . scalar_exp
    (69) scalar_exp -> . scalar_exp PLUS scalar_exp
    (70) scalar_exp -> . scalar_exp MINUS scalar_exp
    (71) scalar_exp -> . scalar_exp TIMES scalar_exp
    (72) scalar_exp -> . scalar_exp DIVIDE scalar_exp
    (73) scalar_exp -> . atom
    (74) scalar_exp -> . LPAREN scalar_exp RPAREN
    (75) atom -> . ID
    (76) atom -> . FLOAT
    (77) atom -> . NUMBER
    (78) atom -> . STRING
    (79) atom -> . NULL

    NOT             shift and go to state 56
    LPAREN          shift and go to state 63
    ID              shift and go to state 57
    FLOAT           shift and go to state 59
    NUMBER          shift and go to state 58
    STRING          shift and go to state 67
    NULL            shift and go to state 68

    conditional_expr               shift and go to state 62
    comparison_predicate           shift and go to state 61
    predicate                      shift and go to state 65
    expr_list                      shift and go to state 64
    scalar_exp                     shift and go to state 60
    atom                           shift and go to state 66

state 43

    (39) insert_statement -> INSERT INTO ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN
    (40) insert_statement -> INSERT INTO ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (82) id_list -> . ID
    (83) id_list -> . id_list COMMA ID

    ID              shift and go to state 20

    id_list                        shift and go to state 69

state 44

    (43) insert_statement -> INSERT INTO ID VALUES . LPAREN expr_list RPAREN
    (44) insert_statement -> INSERT INTO ID VALUES . LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 70


state 45

    (15) drop_table_statement -> DROP TABLE ID SEMI .

    INSERT          reduce using rule 15 (drop_table_statement -> DROP TABLE ID SEMI .)
    SELECT          reduce using rule 15 (drop_table_statement -> DROP TABLE ID SEMI .)
    SHOW            reduce using rule 15 (drop_table_statement -> DROP TABLE ID SEMI .)
